OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/g3d.py


# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 471
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getWindow'):
    G3d_getWindow = _libs['grass_g3d.6.4.2RC2'].G3d_getWindow
    G3d_getWindow.restype = None
    G3d_getWindow.argtypes = [POINTER(G3D_Region)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 474
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_useWindowParams'):
    G3d_useWindowParams = _libs['grass_g3d.6.4.2RC2'].G3d_useWindowParams
    G3d_useWindowParams.restype = None
    G3d_useWindowParams.argtypes = []

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 475
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_readWindow'):
    G3d_readWindow = _libs['grass_g3d.6.4.2RC2'].G3d_readWindow
    G3d_readWindow.restype = c_int
    G3d_readWindow.argtypes = [POINTER(G3D_Region), String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 479
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getBlockNocache'):
    G3d_getBlockNocache = _libs['grass_g3d.6.4.2RC2'].G3d_getBlockNocache
    G3d_getBlockNocache.restype = None
    G3d_getBlockNocache.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int, c_int, c_int, c_int, POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 481
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getBlock'):
    G3d_getBlock = _libs['grass_g3d.6.4.2RC2'].G3d_getBlock
    G3d_getBlock.restype = None
    G3d_getBlock.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int, c_int, c_int, c_int, POINTER(None), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 484
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_readHeader'):
    G3d_readHeader = _libs['grass_g3d.6.4.2RC2'].G3d_readHeader
    G3d_readHeader.restype = c_int
    G3d_readHeader.argtypes = [POINTER(G3D_Map), POINTER(c_int), POINTER(c_int), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(POINTER(c_char))]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 488
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_writeHeader'):
    G3d_writeHeader = _libs['grass_g3d.6.4.2RC2'].G3d_writeHeader
    G3d_writeHeader.restype = c_int
    G3d_writeHeader.argtypes = [POINTER(G3D_Map), c_int, c_int, c_double, c_double, c_double, c_double, c_double, c_double, c_int, c_int, c_int, c_double, c_double, c_double, c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_int, String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 492
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_cacheSizeEncode'):
    G3d_cacheSizeEncode = _libs['grass_g3d.6.4.2RC2'].G3d_cacheSizeEncode
    G3d_cacheSizeEncode.restype = c_int
    G3d_cacheSizeEncode.argtypes = [c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 493
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d__computeCacheSize'):
    G3d__computeCacheSize = _libs['grass_g3d.6.4.2RC2'].G3d__computeCacheSize
    G3d__computeCacheSize.restype = c_int
    G3d__computeCacheSize.argtypes = [POINTER(G3D_Map), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 494
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_fillHeader'):
    G3d_fillHeader = _libs['grass_g3d.6.4.2RC2'].G3d_fillHeader
    G3d_fillHeader.restype = c_int
    G3d_fillHeader.argtypes = [POINTER(G3D_Map), c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_int, c_double, c_double, c_double, c_double, c_double, c_double, c_int, c_int, c_int, c_double, c_double, c_double, String]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 499
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getCoordsMap'):
    G3d_getCoordsMap = _libs['grass_g3d.6.4.2RC2'].G3d_getCoordsMap
    G3d_getCoordsMap.restype = None
    G3d_getCoordsMap.argtypes = [POINTER(G3D_Map), POINTER(c_int), POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 500
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getCoordsMapWindow'):
    G3d_getCoordsMapWindow = _libs['grass_g3d.6.4.2RC2'].G3d_getCoordsMapWindow
    G3d_getCoordsMapWindow.restype = None
    G3d_getCoordsMapWindow.argtypes = [POINTER(G3D_Map), POINTER(c_int), POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 501
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getNofTilesMap'):
    G3d_getNofTilesMap = _libs['grass_g3d.6.4.2RC2'].G3d_getNofTilesMap
    G3d_getNofTilesMap.restype = None
    G3d_getNofTilesMap.argtypes = [POINTER(G3D_Map), POINTER(c_int), POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 502
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getRegionMap'):
    G3d_getRegionMap = _libs['grass_g3d.6.4.2RC2'].G3d_getRegionMap
    G3d_getRegionMap.restype = None
    G3d_getRegionMap.argtypes = [POINTER(G3D_Map), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 504
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getWindowMap'):
    G3d_getWindowMap = _libs['grass_g3d.6.4.2RC2'].G3d_getWindowMap
    G3d_getWindowMap.restype = None
    G3d_getWindowMap.argtypes = [POINTER(G3D_Map), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 506
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getTileDimensionsMap'):
    G3d_getTileDimensionsMap = _libs['grass_g3d.6.4.2RC2'].G3d_getTileDimensionsMap
    G3d_getTileDimensionsMap.restype = None
    G3d_getTileDimensionsMap.argtypes = [POINTER(G3D_Map), POINTER(c_int), POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 507
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_tileTypeMap'):
    G3d_tileTypeMap = _libs['grass_g3d.6.4.2RC2'].G3d_tileTypeMap
    G3d_tileTypeMap.restype = c_int
    G3d_tileTypeMap.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 508
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_fileTypeMap'):
    G3d_fileTypeMap = _libs['grass_g3d.6.4.2RC2'].G3d_fileTypeMap
    G3d_fileTypeMap.restype = c_int
    G3d_fileTypeMap.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 509
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_tilePrecisionMap'):
    G3d_tilePrecisionMap = _libs['grass_g3d.6.4.2RC2'].G3d_tilePrecisionMap
    G3d_tilePrecisionMap.restype = c_int
    G3d_tilePrecisionMap.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 510
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_tileUseCacheMap'):
    G3d_tileUseCacheMap = _libs['grass_g3d.6.4.2RC2'].G3d_tileUseCacheMap
    G3d_tileUseCacheMap.restype = c_int
    G3d_tileUseCacheMap.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 511
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_printHeader'):
    G3d_printHeader = _libs['grass_g3d.6.4.2RC2'].G3d_printHeader
    G3d_printHeader.restype = None
    G3d_printHeader.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 512
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getRegionStructMap'):
    G3d_getRegionStructMap = _libs['grass_g3d.6.4.2RC2'].G3d_getRegionStructMap
    G3d_getRegionStructMap.restype = None
    G3d_getRegionStructMap.argtypes = [POINTER(G3D_Map), POINTER(G3D_Region)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 515
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_flushIndex'):
    G3d_flushIndex = _libs['grass_g3d.6.4.2RC2'].G3d_flushIndex
    G3d_flushIndex.restype = c_int
    G3d_flushIndex.argtypes = [POINTER(G3D_Map)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 516
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_initIndex'):
    G3d_initIndex = _libs['grass_g3d.6.4.2RC2'].G3d_initIndex
    G3d_initIndex.restype = c_int
    G3d_initIndex.argtypes = [POINTER(G3D_Map), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 519
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_retile'):
    G3d_retile = _libs['grass_g3d.6.4.2RC2'].G3d_retile
    G3d_retile.restype = None
    G3d_retile.argtypes = [POINTER(None), String, c_int, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 522
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G_rle_count_only'):
    G_rle_count_only = _libs['grass_g3d.6.4.2RC2'].G_rle_count_only
    G_rle_count_only.restype = c_int
    G_rle_count_only.argtypes = [String, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 523
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G_rle_encode'):
    G_rle_encode = _libs['grass_g3d.6.4.2RC2'].G_rle_encode
    G_rle_encode.restype = None
    G_rle_encode.argtypes = [String, String, c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 524
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G_rle_decode'):
    G_rle_decode = _libs['grass_g3d.6.4.2RC2'].G_rle_decode
    G_rle_decode.restype = None
    G_rle_decode.argtypes = [String, String, c_int, c_int, POINTER(c_int), POINTER(c_int)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 527
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_allocTilesType'):
    G3d_allocTilesType = _libs['grass_g3d.6.4.2RC2'].G3d_allocTilesType
    G3d_allocTilesType.restype = POINTER(None)
    G3d_allocTilesType.argtypes = [POINTER(G3D_Map), c_int, c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 528
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_allocTiles'):
    G3d_allocTiles = _libs['grass_g3d.6.4.2RC2'].G3d_allocTiles
    G3d_allocTiles.restype = POINTER(None)
    G3d_allocTiles.argtypes = [POINTER(G3D_Map), c_int]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 529
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_freeTiles'):
    G3d_freeTiles = _libs['grass_g3d.6.4.2RC2'].G3d_freeTiles
    G3d_freeTiles.restype = None
    G3d_freeTiles.argtypes = [POINTER(None)]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\G3d.h: 532
if hasattr(_libs['grass_g3d.6.4.2RC2'], 'G3d_getTilePtr'):
    G3d_getTilePtr = _libs['grass_g3d.6.4.2RC2'].G3d_getTilePtr
    G3d_getTilePtr.restype = POINTER(None)
    G3d_getTilePtr.argtypes = [POINTER(G3D_Map), c_int]
